<resources>
    <string name="app_name">YourTodayRecipe</string>
    <string name="recipes">Recipes</string>
    <string name="favourites">Favourites</string>
    <string name="food_joke">Food Joke</string>
    <string name="sorry">Sorry :(</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main course</string>
    <string name="side_dish">Side dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="ketorganic">Ketorganic</string>
    <string name="snack">Snack</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="drink">Drink</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="soup">Soup</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favourites">Save To Favourites</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="no_saved_recipes">No saved recipes</string>
    <string name="share">Share</string>
    <string name="choose_meal_and_diet_type">Choose meal and diet type</string>
    <string name="download_error">Download error</string>
    <string name="recipe_bottom_sheet">RecipeBottomSheet</string>
</resources>