<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/meal_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/meal_type_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_type_tv">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/meal_type_chip_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                app:checkedChip="@id/main_course_chip">
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/main_course_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/side_dish_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/dessert_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/appetizer_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/salad_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/bread_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/breakfast_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/snack_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/marinade_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/fingerfood_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fingerfood"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/sauce_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/beverage_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/drink_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/soup_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/diet_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/diet_type"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meal_type_scroll_view" />

    <HorizontalScrollView
        android:id="@+id/diet_type_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diet_type_tv">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/diet_type_chip_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CustomChipStyle"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                app:checkedChip="@id/gluten_free_chip">
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/gluten_free_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/vegetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/lacto_vegetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lacto_vegetarian"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/ovo_vegetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ovo_vegetarian"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/ketorganic_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketorganic"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/pescetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescetarian"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/paleo_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/primal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/whole30_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole30"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/vegan_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diet_type_scroll_view"
        android:text="@string/apply"
        android:textAllCaps="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>