<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.chari.ic.yourtodayrecipe.view.RecipeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".view.RecipesFragment">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_frame_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shimmer_repeat_mode="restart"
            app:shimmer_direction="left_to_right">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--add  several shimmer placeholder layout -->

                <include layout="@layout/placeholder_item_layout" />

                <include layout="@layout/placeholder_item_layout" />

                <include layout="@layout/placeholder_item_layout" />

                <include layout="@layout/placeholder_item_layout" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recipes_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_restaurant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            android:contentDescription="@string/choose_meal_and_diet_type"/>

        <ImageView
            android:id="@+id/error_imageview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.5"
            android:src="@drawable/ic_error_sad"
            apiResponse="@{viewmodel.recipesResult}"
            cachedState="@{viewmodel.cachedRecipes}"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/shimmer_frame_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/shimmer_frame_layout"
            app:layout_constraintVertical_bias="0.45"
            android:contentDescription="@string/download_error"/>

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:text="@string/sorry"
            apiResponse="@{viewmodel.recipesResult}"
            cachedState="@{viewmodel.cachedRecipes}"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/error_imageview"
            app:layout_constraintStart_toStartOf="@id/error_imageview"
            app:layout_constraintTop_toBottomOf="@id/error_imageview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>