<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="recipe"
            type="com.chari.ic.yourtodayrecipe.model.Recipe" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        app:layoutDescription="@xml/fragment_overview_xml_constraintlayout_scene">

        <ImageView
            android:id="@+id/main_imageView"
            loadImageFromUrl="@{recipe.image}"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:id="@+id/gradient_overlay"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintBottom_toBottomOf="@id/main_imageView"
            app:layout_constraintEnd_toEndOf="@id/main_imageView"
            app:layout_constraintStart_toStartOf="@id/main_imageView"
            app:layout_constraintTop_toTopOf="@id/main_imageView"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/time_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@id/time_textView"
            app:layout_constraintEnd_toEndOf="@id/time_textView"
            app:layout_constraintStart_toStartOf="@id/time_textView"
            app:srcCompat="@drawable/ic_time"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:hint="100"
            android:text="@{String.valueOf(recipe.readyInMinutes)}"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/main_imageView"
            app:layout_constraintEnd_toEndOf="@id/main_imageView" />

        <ImageView
            android:id="@+id/likes_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@id/likes_textView"
            app:layout_constraintEnd_toEndOf="@id/likes_textView"
            app:layout_constraintStart_toStartOf="@id/likes_textView"
            app:srcCompat="@drawable/ic_favorites"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/likes_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:hint="100"
            android:text="@{String.valueOf(recipe.aggregateLikes)}"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/time_textView"
            app:layout_constraintEnd_toStartOf="@id/time_textView"
            app:layout_constraintTop_toTopOf="@id/time_textView" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/courgette"
            android:text="@{recipe.title}"
            android:textColor="@color/titleColor"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_imageView" />

        <ImageView
            android:id="@+id/vegetarian_check_mark"
            selected="@{recipe.vegetarian}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/title_textView"
            app:layout_constraintTop_toBottomOf="@id/title_textView"
            app:srcCompat="@drawable/ic_check"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/vegetarian_textView"
            selected="@{recipe.vegetarian}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/vegetarian"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@id/vegetarian_check_mark"
            app:layout_constraintStart_toEndOf="@id/vegetarian_check_mark"
            app:layout_constraintTop_toTopOf="@id/vegetarian_check_mark" />

        <ImageView
            android:id="@+id/vegan_check_mark"
            selected="@{recipe.vegan}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/vegetarian_check_mark"
            app:layout_constraintTop_toBottomOf="@id/vegetarian_check_mark"
            app:srcCompat="@drawable/ic_check"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/vegan_textView"
            selected="@{recipe.vegan}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/vegan"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@id/vegan_check_mark"
            app:layout_constraintStart_toEndOf="@id/vegan_check_mark"
            app:layout_constraintTop_toTopOf="@id/vegan_check_mark" />

        <ImageView
            android:id="@+id/gluten_free_check_mark"
            selected="@{recipe.glutenFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@id/vegetarian_check_mark"
            app:layout_constraintStart_toEndOf="@id/vegetarian_textView"
            app:layout_constraintTop_toTopOf="@id/vegetarian_check_mark"
            app:srcCompat="@drawable/ic_check"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/gluten_free_textView"
            selected="@{recipe.glutenFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gluten_free"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@id/gluten_free_check_mark"
            app:layout_constraintStart_toEndOf="@id/gluten_free_check_mark"
            app:layout_constraintTop_toTopOf="@id/gluten_free_check_mark" />

        <ImageView
            android:id="@+id/dairy_free_check_mark"
            selected="@{recipe.dairyFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/gluten_free_check_mark"
            app:layout_constraintTop_toBottomOf="@id/gluten_free_check_mark"
            app:srcCompat="@drawable/ic_check"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/dairy_free_textView"
            selected="@{recipe.dairyFree}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dairy_free"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@id/dairy_free_check_mark"
            app:layout_constraintStart_toEndOf="@id/dairy_free_check_mark"
            app:layout_constraintTop_toTopOf="@id/dairy_free_check_mark" />

        <ImageView
            android:id="@+id/healthy_check_mark"
            selected="@{recipe.veryHealthy}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@id/gluten_free_check_mark"
            app:layout_constraintStart_toEndOf="@id/gluten_free_textView"
            app:layout_constraintTop_toTopOf="@id/gluten_free_check_mark"
            app:srcCompat="@drawable/ic_check"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/healthy_textView"
            selected="@{recipe.veryHealthy}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/healthy"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@id/healthy_check_mark"
            app:layout_constraintStart_toEndOf="@id/healthy_check_mark"
            app:layout_constraintTop_toTopOf="@id/healthy_check_mark" />

        <ImageView
            android:id="@+id/cheap_check_mark"
            selected="@{recipe.cheap}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/healthy_check_mark"
            app:layout_constraintTop_toBottomOf="@id/healthy_check_mark"
            app:srcCompat="@drawable/ic_check"
            app:tint="@color/itemColor" />

        <TextView
            android:id="@+id/cheap_textView"
            selected="@{recipe.cheap}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cheap"
            android:textColor="@color/itemColor"
            app:layout_constraintBottom_toBottomOf="@id/cheap_check_mark"
            app:layout_constraintStart_toEndOf="@id/cheap_check_mark"
            app:layout_constraintTop_toTopOf="@id/cheap_check_mark" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dairy_free_check_mark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/summary_textView"
                    parseHtml="@{recipe.summary}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>